# indexer

./: .gitignore  .mise.toml  Cargo.toml  Justfile  LICENSE  README.md  deny.toml  diesel.patch  diesel.toml  eip712.json  ethui-indexer.toml  iron-indexer.toml
.github/workflows/: rust.yml
benches/: ethui-indexer.toml  iron-indexer.toml  provider_concurrency.rs  usdc_holders_backfill.rs
benches/datasets/: sepolia-usdc-holders.txt
benches/utils/: mod.rs
migrations/2023-11-28-163820_create_accounts/: up.sql
migrations/2023-11-28-190011_create_txs/: up.sql
migrations/2023-11-30-220900_chains/: down.sql  up.sql
migrations/2023-12-01-114852_create_backfill_jobs/: up.sql
src/: config.rs  events.rs  lib.rs  main.rs  provider.rs  rearrange.rs  sync.rs  task.rs
src/api/: app.rs  app_state.rs  error.rs  mod.rs  routes.rs  test_utils.rs
src/api/auth/: claims.rs  jwt.rs  middleware.rs  mod.rs  signature.rs
src/api/registration/: mod.rs
src/backfill/: mod.rs  worker.rs
src/config/: mod.rs  whitelist.rs
src/db/: mod.rs  models.rs  schema.rs  types.rs  utils.rs
src/sync/: backfill.rs  forward.rs  main.rs  mod.rs  provider.rs  utils.rs
