[package]
name = "iron-indexer"
edition = "2021"
version = "0.0.1"
license-file = "./LICENSE"
homepage = "https://github.com/iron-wallet"
repository = "https://github.com/iron-wallet/indexer"
exclude = [".github/"]
authors = ["Miguel Palhas <mpalhas@gmail.com>"]

[dependencies]
tokio = { version = "1.33", features = ["full", "sync"] }
clap = { version = "4.4.8", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive", "std"] }
futures = "0.3.28"
toml = "0.8.8"
thiserror = "1.0.50"
async-trait = "0.1.74"

# tracing
color-eyre = "0.6.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# web
actix = "0.13.1"
actix-web = "4"
actix-cors = "0.6.4"

# db
diesel = { version = "2.1.0", features = ["postgres", "chrono", "numeric"] }
diesel-async = { version = "0.4.1", features = [
  "postgres",
  "deadpool",
  "async-connection-wrapper",
] }
tracing-actix-web = "0.7.9"
chrono = { version = "0.4.31", features = ["serde"], default-features = false }
bigdecimal = { version = "0.4.2", default-features = false }

# reth
reth-db = { path = "/home/naps62/contrib/paradigmxyz/reth/crates/storage/db" }
reth-primitives = { path = "/home/naps62/contrib/paradigmxyz/reth/crates/primitives" }
reth_provider = { path = "/home/naps62/contrib/paradigmxyz/reth/crates/storage/provider", package = "reth-provider" }
reth-rpc-types = { path = "/home/naps62/contrib/paradigmxyz/reth/crates/rpc/rpc-types" }
alloy-primitives = { version = "0.5.0", features = ["serde"] }

# cuckoo
scalable_cuckoo_filter = "0.2.3"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
lazy_static = "1.4.0"
rstest = "0.18.2"

[[bench]]
name = "usdc_holders_backfill"
harness = false
